Some UI changes and a new blog post.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: post-index
 title: Code, Coffee, Life
 description: "Tadej's Blog"
 comments: false
+image:
+  feature: bg.png
+  credit: DT
+  creditlink: http://deutschtutor.com/
 ---
 {% for post in paginator.posts %}
 <article class="hentry">
