--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ title: Code, Coffee, Life
 description: "Tadej's Blog"
 comments: false
 image:
-  feature: bg.png
-  credit: DT
-  creditlink: http://deutschtutor.com/
+  feature: bg_new.jpg
 ---
 {% for post in paginator.posts %}
 <article class="hentry">
